Docs workflow update (#554)
* docs workflow update

* commit to test docs deployment

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -46,9 +46,9 @@ jobs:
           exit $(tail -n 1 build-output-warnings.txt | awk '{print $2}')
       - name: Deploy
         if: github.event_name == 'push' && github.ref == 'refs/heads/development'
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: ${{runner.workspace}}/build-docs/sphinx/html
-          SINGLE_COMMIT: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: ${{runner.workspace}}/build-docs/sphinx/html
+          single-commit: true
